--- a/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
+++ b/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
@@ -48,13 +48,13 @@
 
           <!-- Disabled Email address placeholder for No Login (Guest)-->  
           <!-- 20200422 FARHAN-->
-          <!-- <mat-grid-tile colspan="2" rowspan="1">
+          <mat-grid-tile colspan="2" rowspan="1">
             <mat-form-field style="padding-left:15px; width:100%">
               <input matInput matTooltip="Enter an email address to receive search results" matTooltipPosition="before" placeholder="Enter your Email Address"
                 pattern="[a-zA-Z0-9!#$%&amp;'*+\/=?^_`{|}~.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*" [required]="!diableEmail" [disabled]="diableEmail"
                 name="UserId" ngModel>
             </mat-form-field>
-          </mat-grid-tile> -->
+          </mat-grid-tile>
         </mat-grid-list>
 
         <div style="height:10px;font-size:1px;">&nbsp;</div>
