--- a/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
+++ b/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
@@ -49,9 +49,10 @@
           <mat-grid-tile colspan="2" rowspan="1">
             <mat-form-field style="padding-left:15px; width:100%">
               <input matInput matTooltip="Enter an email address to receive search results" matTooltipPosition="before" placeholder="Enter your E-mail Address"
-                pattern="[a-zA-Z0-9!#$%&amp;'*+\/=?^_`{|}~.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*" [required]="!diableEmail" [disabled]="diableEmail"
-                name="UserId" ngModel>
+                pattern="[a-zA-Z0-9!#$%&amp;'*+\/=?^_`{|}~.-]+@[a-zA-Z0-9-]+(\.[a-zA-Z0-9-]+)*" [disabled]="diableEmail"
+                name="EmailId" ngModel>  
             </mat-form-field>
+                          <!-- [required]="!diableEmail"  -->
           </mat-grid-tile>
         </mat-grid-list>
 
