--- a/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
+++ b/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
@@ -558,18 +558,18 @@
                 multiple ngModel>
                 <option value="1">Acetylation_A</option>
                 <option value="2">Acetylation_K</option>
-                <option value="3">Acetylation_M</option>
-                <option value="4">Acetylation_S</option>
-                <option value="5">Amidation_F</option>
-                <option value="6">Hydroxylation_p</option>
-                <option value="7">Methylation_K</option>
-                <option value="8">Methylation_R</option>
-                <option value="9">N-Linked Glycosylation_N</option>
-                <option value="10">O-Linked Glycosylation_T</option>
-                <option value="11">O-Linked Glycosylation_S</option>
-                <option value="12">Phosphorylation_S</option>
-                <option value="13">Phosphorylation_T</option>
-                <option value="14">Phosphorylation_Y</option>
+                <!-- <option value="3">Acetylation_M</option> -->
+                <option value="3">Acetylation_S</option>
+                <option value="4">Amidation_F</option>
+                <option value="5">Hydroxylation_P</option>
+                <option value="6">Methylation_K</option>
+                <option value="7">Methylation_R</option>
+                <option value="8">N_Linked_Glycosylation_N</option>
+                <option value="9">O_Linked_Glycosylation_T</option>
+                <option value="10">O_Linked_Glycosylation_S</option>
+                <option value="11">Phosphorylation_S</option>
+                <option value="12">Phosphorylation_T</option>
+                <option value="13">Phosphorylation_Y</option>
               </select>
             </label>
           </div>
