--- a/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
+++ b/Code/PerceptronFrontEnd/src/app/protein-search/protein-search.component.html
@@ -83,7 +83,7 @@
                   <i *ngIf='email.files.length==1'>{{email.files[0].name}}</i>
                 </ng-template>
                 <input #email type="file" #imgFileInput (ngModel)="email" #FileName="ngModel" required name="FileName"
-                  [(ngModel)]="filenameModel" id="FileName" (change)="upload(Uploaded_File)" accept=".txt, .mgf, .mzXML"
+                  [(ngModel)]="filenameModel" id="FileName" (change)="upload(Uploaded_File)" accept=".txt, .mgf, .mzXML, .zip"
                   multiple ngModel />
                 <mat-error style="display: inline; font-style: italic;" *ngIf="email.files.length==0">
                   Please select atleast one data file.
